# compress_tool

./: CMakeLists copy.txt  CMakeLists.txt  readme.md
include/: ArchiveTool.h
src/: ArchiveTool.cpp
tests/: main.cpp
